--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@turf/turf": "^7.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-maps": "^1.15.6",
+    "react-native-safe-area-context": "^4.10.4",
+    "react-native-screens": "^3.31.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
